Use generics to create mailer object
Co-authored-by: Thomas Florio <mackdk@users.noreply.github.com>